--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build_test_and_release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
