--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,10 @@ jobs:
 
       - name: tests
         run: make tests
+        
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
           
       - name: Create Release
         id: create_release
@@ -33,8 +37,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: git-tag-${{ steps.date.outputs.date }}
+          release_name: git-releases-${{ steps.date.outputs.date }}
           draft: false
           prerelease: false
           
