--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
         
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d-%h-%i')"
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d-%H-%M')"
           
       - name: Create Release
         id: create_release
